tests/characterization/snapshots/representative_errors__backend_info_extra_argument.snap
---
source: tests/characterization/errors.rs
expression: "context.run(args, 1)"
---
exit: 1
--- stdout ---
--- stderr ---
Error: oqtopus backend info does not accept arguments.
--- end ---
