tests/characterization/snapshots/representative_errors__backend_status_extra_argument.snap
---
source: tests/characterization/errors.rs
expression: "context.run(args, 1)"
---
exit: 1
--- stdout ---
--- stderr ---
Error: oqtopus backend status does not accept arguments.
--- end ---
