tests/characterization/snapshots/representative_errors__completion_no_arguments.snap
---
source: tests/characterization/errors.rs
expression: "context.run(args, 1)"
---
exit: 1
--- stdout ---
Usage:
  oqtopus completion <bash|zsh|fish>
--- stderr ---
--- end ---
