tests/characterization/snapshots/representative_errors__manager_status_extra_argument.snap
---
source: tests/characterization/errors.rs
expression: "context.run(args, 1)"
---
exit: 1
--- stdout ---
--- stderr ---
Error: oqtopus manager status does not accept arguments.
--- end ---
