tests/characterization/snapshots/representative_errors__manager_versions_extra_argument.snap
---
source: tests/characterization/errors.rs
expression: "context.run(args, 1)"
---
exit: 1
--- stdout ---
Usage:
  oqtopus manager versions
--- stderr ---
--- end ---
