tests/characterization/snapshots/representative_errors__unknown_backend_command.snap
---
source: tests/characterization/errors.rs
expression: "context.run(args, 1)"
---
exit: 1
--- stdout ---
--- stderr ---
Error: unknown backend command: unknown
--- end ---
